use css and other fixes

--- a/src/RecruitMe.Web/ClientApp/components/payments/makePayment/makePayment.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/payments/makePayment/makePayment.vue.html
@@ -39,9 +39,15 @@
 
 <script src="./makePayment.ts"></script>
 
-<style lang="scss" scoped>
-p, h3, h4 {
-    margin-bottom: 2px;
+<style scoped>
+p {
+  margin-bottom: 2px;
+}
+h3 {
+  margin-bottom: 2px;
+}
+h4 {
+  margin-bottom: 2px;
 }
 
 svg {
@@ -53,20 +59,20 @@ svg {
 .path {
   stroke-dasharray: 1000;
   stroke-dashoffset: 0;
-  &.circle {
-    -webkit-animation: dash .9s ease-in-out;
-    animation: dash .9s ease-in-out;
-  }
-  &.line {
-    stroke-dashoffset: 1000;
-    -webkit-animation: dash .9s .35s ease-in-out forwards;
-    animation: dash .9s .35s ease-in-out forwards;
-  }
-  &.check {
-    stroke-dashoffset: -100;
-    -webkit-animation: dash-check .9s .35s ease-in-out forwards;
-    animation: dash-check .9s .35s ease-in-out forwards;
-  }
+}
+.path.circle {
+  -webkit-animation: dash .9s ease-in-out;
+  animation: dash .9s ease-in-out;
+}
+.path.line {
+  stroke-dashoffset: 1000;
+  -webkit-animation: dash .9s .35s ease-in-out forwards;
+  animation: dash .9s .35s ease-in-out forwards;
+}
+.path.check {
+  stroke-dashoffset: -100;
+  -webkit-animation: dash-check .9s .35s ease-in-out forwards;
+  animation: dash-check .9s .35s ease-in-out forwards;
 }
 
 @-webkit-keyframes dash {
