Removed BaseAddressNoSsl and Pull requeest fixes

--- a/src/RecruitMe.Web/ClientApp/components/adminpanel/details/details.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/adminpanel/details/details.vue.html
@@ -26,7 +26,7 @@
                         Jeśli chcesz usunąć pojedynczy egzamin lub termin kandydata skorzystaj z panelu egzaminy.
                     </p>
                     <p>
-                        Aby ułatwić korzystanie z sytemu, upewnij się przed rozpoczęciem rekrutacji, że obiekty są poprawnie przygotowane.
+                        Aby ułatwić korzystanie z systemu, upewnij się przed rozpoczęciem rekrutacji, że obiekty są poprawnie przygotowane.
                     </p>
                     <v-text-field readonly label="Id" v-model="examCategory.id" name="examCategory.id"></v-text-field>
                     <v-text-field label="Nazwa kategorii" v-model="examCategory.name" name="examCategory.name"></v-text-field>
