Removed status from exams

--- a/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
@@ -27,7 +27,7 @@
                 <v-btn to="/chatwith/admin">
                     <span>Chat   <v-icon>chat</v-icon></span>
                 </v-btn>
-                <v-btn to="/recruitment/yourexams">
+                <v-btn to="/recruitment/myexams">
                     <span>Egzaminy   <v-icon>school</v-icon></span>
                 </v-btn>
                 <v-btn to="/payments/makePayment">
@@ -105,7 +105,7 @@
                                 Chat
                             </v-list-item-title>
                         </v-list-item>
-                        <v-list-item to="/recruitment/yourexams">
+                        <v-list-item to="/recruitment/myexams">
                             <v-list-item-title>
                                 Egzaminy
                             </v-list-item-title>
