--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -3,7 +3,22 @@
         <h2>Profil</h2>
         <!--I asume here email is the marker if profile is loaded-->
         <spinner v-if="!profile.email"></spinner>
-
+        <div v-if="profile && profile.status" class="m-3 row">
+            <v-container text-xs-center>
+                <v-row justify="center">
+                    <v-card row wrap align-center :class="className ? className : defaultClassName">
+                        <v-card-subtitle>
+                            <p v-if="RecruitmentStatusEnum.Accepted==profile.status">
+                                Gratulacje! Zostałeś przyjęty! Dalszych szczegółów możesz spodziewać się wkrótce drogą mailową lub telefoniczną.
+                            </p>
+                            <p v-if="RecruitmentStatusEnum.Rejected==profile.status">
+                                Niestety, ale nie jesteśmy w stanie przyjąć Ciebie do naszej szkoły.
+                            </p>
+                        </v-card-subtitle>
+                    </v-card>
+                </v-row>
+            </v-container>
+        </div>
         <div class="row" v-if="profile.email">
             <div class="col-sm-6">
                 <v-card class="mb-3">
