Fixed candidates mage screen and added omr tests

--- a/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/recruitment/profile/profile.vue.html
@@ -73,7 +73,7 @@
                                           label="Wybierz dokument">
                             </v-file-input>
                             <v-btn @click="uploadDocument">
-                                Prześlij document
+                                Prześlij dokument
                             </v-btn>
                         </div>
                         <div v-for="document in profile.documents">
