--- a/src/RecruitMe.Web/ClientApp/components/staticpages/home.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/staticpages/home.vue.html
@@ -2,11 +2,10 @@
     <v-container bg fill-height grid-list-md text-xs-center>
         <v-layout row wrap>
             <v-flex>
-                <p>This is the home page of this project</p>
-                <p>Here is a picture of a cat</p>
-                <img width="100" height="100" src="https://upload.wikimedia.org/wikipedia/commons/e/ee/Grumpy_Cat_by_Gage_Skidmore.jpg" />
             </v-flex>
             <v-flex>
+                <p>This is the home page of this page. Put some crucial information here...</p>
+                <p>And make it look nice!</p>
                 <p>
                     Maecenas gravida augue dis.
                     Eget bibendum senectus bibendum dui.
