Addressed the "cannot delete file opened by another proces" bug

--- a/src/RecruitMe.Web/ClientApp/components/staticpages/home.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/staticpages/home.vue.html
@@ -4,7 +4,7 @@
             <v-flex>
             </v-flex>
             <v-flex>
-                <p>This is the home page of this page. Put some crucial information here...</p>
+                <p>This is the home page of this website. Put some crucial information here...</p>
                 <p>And make it look nice!</p>
                 <p>
                     Maecenas gravida augue dis.
